package com.example.tubes


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.pressBack
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.*
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.`is`
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class RegisterTest {

    @Rule
    @JvmField
    var mActivityScenarioRule = ActivityScenarioRule(Register::class.java)

    @Test
    fun registerTest() {
        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        Thread.sleep(500)

        val materialButton = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton.perform(click())
        onView(isRoot()).perform(waitFor(3000))

        val textInputEditText = onView(
            allOf(withId(R.id.Username),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.inputLayoutUsername),
                        0),
                    0),
                isDisplayed()))
        textInputEditText.perform(click())

        val textInputEditText2 = onView(
            allOf(withId(R.id.Username),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.inputLayoutUsername),
                        0),
                    0),
                isDisplayed()))
        textInputEditText2.perform(replaceText("dian"), closeSoftKeyboard())


        val materialButton2 = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton2.perform(click())
        onView(isRoot()).perform(waitFor(3000))

        val textInputEditText3 = onView(
            allOf(childAtPosition(
                childAtPosition(
                    withId(R.id.inputLayoutPassword),
                    0),
                0),
                isDisplayed()))
        textInputEditText3.perform(replaceText("12345"), closeSoftKeyboard())


        val materialButton3 = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton3.perform(click())
        onView(isRoot()).perform(waitFor(3000))

        val textInputEditText4 = onView(
            allOf(childAtPosition(
                childAtPosition(
                    withId(R.id.inputLayoutEmail),
                    0),
                0),
                isDisplayed()))
        textInputEditText4.perform(replaceText("dian@gmail.com"), closeSoftKeyboard())


        val materialButton4 = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton4.perform(click())
        onView(isRoot()).perform(waitFor(3000))

        val textInputEditText5 = onView(
            allOf(childAtPosition(
                childAtPosition(
                    withId(R.id.inputLayoutTanggalLahir),
                    0),
                0),
                isDisplayed()))
        textInputEditText5.perform(replaceText("29012003"), closeSoftKeyboard())


        val materialButton5 = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton5.perform(click())
        onView(isRoot()).perform(waitFor(3000))

        val textInputEditText6 = onView(
            allOf(childAtPosition(
                childAtPosition(
                    withId(R.id.inputLayoutNomorTelepon),
                    0),
                0),
                isDisplayed()))
        textInputEditText6.perform(replaceText("082199036598"), closeSoftKeyboard())

        val materialButton6 = onView(
            allOf(withId(R.id.btnDaftar), withText("Daftar"),
                childAtPosition(
                    allOf(withId(R.id.linearLayout),
                        childAtPosition(
                            withClassName(`is`("androidx.constraintlayout.widget.ConstraintLayout")),
                            2)),
                    0),
                isDisplayed()))
        materialButton6.perform(click())
        onView(isRoot()).perform(waitFor(3000))
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View>, position: Int,
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }

    fun waitFor(delay: Long): ViewAction? {
        return object : ViewAction {
            override fun getConstraints(): Matcher<View> {
                return isRoot()
            }

            override fun getDescription(): String {
                return "Wait for $delay milliseconds."
            }

            override fun perform(uiController: UiController, view: View) {
                uiController.loopMainThreadForAtLeast(delay)
            }
        }
    }
}
